--- a/config.toml
+++ b/config.toml
@@ -2,110 +2,86 @@
 title           = "Workloads"
 googleAnalytics = "" # Add your identifier. For example UA-99631805-1.
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+    unsafe = true
+
+  [markup.highlight]
+    codeFences  = true
+    guessSyntax = true
+    noClasses   = false
+
 # items for main menu, see https://gohugo.io/content-management/menus/#define-in-site-configuration
 [menu]
   [[menu.main]]
     identifier = "home"
-    name = "Home"
-    url = "/"
-    weight = 1
+    name       = "Home"
+    url        = "/"
+    weight     = 1
 
   [[menu.main]]
     identifier = "about"
-    name = "About"
-    url = "/about"
-    weight = 2
-
-  [[menu.main]]
-    identifier = "contact"
-    name = "Contact Me"
-    url = "/contact"
-    weight = 3
+    name       = "About"
+    url        = "/about"
+    weight     = 2
 
 [params]
-  logo = "" # You can add own logo. For example "/images/logo.png".
-  description = "Norlin – A Beautiful Dark Blog Theme for Hugo."
+  logo        = "" # You can add own logo. For example "/images/logo.png".
+  description = "Workloads v1, a Hugo Theme based on Norlin."
 
-  [params.author]
-    name = "Robert Wilson"
-    avatar = "/images/15.jpg"
+  [params.authors]
 
-  #-------------------------------
-  # Hero Settings
+    [params.authors.kerim]
+      name     = "Kerim Satirli"
+      avatar   = "/images/kerim.jpg"
+      bio      = "Kerim is a senior developer advocate at HashiCorp, where he coaches operators and developers on sustainable infrastructure and orchestration workflows."
+      github   = "https://github.com/ksatirli"
+      linkedin = "https://www.linkedin.com/in/kerimsatirli/"
+      twitter  = "https://twitter.com/ksatirli"
+
+
+  [params.fontawesome]
+    identifier = "f8764d0198"
+
   [params.hero]
-    hero__title = "Robert Wilson"
+    hero__title       = "Robert Wilson"
     hero__description = "Thoughts, stories and ideas."
-    hero__image = "/images/01.jpg"
+    hero__image       = "/images/01.jpg"
 
   [[params.social]]
-    icon = "ion-logo-github"
+    icon = "fa-brands fa-github"
     name = "GitHub"
     link = "https://github.com/workloads"
 
   [[params.social]]
-    icon = "ion-logo-twitter"
+    icon = "fa-brands fa-x-twitter"
     name = "X"
     link = "https://x.com/wrklds"
 
   [[params.social]]
-    icon = "ion-logo-youtube"
+    icon = "fa-brands fa-youtube"
     name = "YouTube"
     link = "https://youtube.com/c/workloads"
 
   [[params.social]]
-    icon = "ion-logo-instagram"
+    icon = "fa-brands fa-instagram"
     name = "Instagram"
     link = "https://instagram.com/wrklds"
 
-
-  #-------------------------------
-  # Newsletter (partials/footer-widgets/widget-subscribe.html)
-  [params.mailchimp]
-    mailchimp__title = "Get Interesting News"
-    mailchimp__text = "Subscribe to our newsletter and we’ll send you the emails of latest posts."
-    mailchimp__identifier = "frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3" # Add your MailChimp form identifier. For example - frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
-    mailchimp__button__text = "Join" # Add your button text
-
-
-  #-------------------------------
-  # Contact Settings
-  [params.contact]
-    email = "hey@workloads.io" # Add your form_id
-
-    # NOTE
-    # Norlin comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want.
-
 [related]
   includeNewer = true
-  threshold = 85
-  toLower = false
+  threshold    = 85
+  toLower      = false
 
   [[related.indices]]
-  name = "tags"
-  weight = 80
+    name   = "tags"
+    weight = 80
 
   [[related.indices]]
-  name = "keywords"
-  weight = 40
+    name   = "keywords"
+    weight = 40
 
   [[related.indices]]
-  name = "date"
-  weight = 10
-
-
-[markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
-
-[outputs]
-  home = [
-    "HTML",
-    "RSS",
-    "JSON"
-  ]
-
-[markup.highlight]
-  codeFences = true
-  guessSyntax = true
-  noClasses = false
+    name   = "date"
+    weight = 10
